移除使用 Html.Raw()

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -816,11 +816,11 @@
 </script>
 
 <script>
-    const RelevantGlobalIndex = @Html.Raw(Model.RelevantGlobalIndex);
+    const RelevantGlobalIndex = @Model.RelevantGlobalIndex;
     const RelevantGlobalIndex_Success = "@Model.RelevantGlobalIndex_Success";
-    const RelevantFund = @Html.Raw(Model.RelevantFund);
+    const RelevantFund = @Model.RelevantFund;
     const RelevantFund_Success = "@Model.RelevantFund_Success";
-    const RelevantETF = @Html.Raw(Model.RelevantETF);
+    const RelevantETF = @Model.RelevantETF;
     const RelevantETF_Success = "@Model.RelevantETF_Success";
 
     (function ($, window, document, undefined) {
@@ -1091,11 +1091,11 @@
 </script>
 
 <script>
-    const data_D = @Html.Raw(Model.PriceData_D);
+    const data_D = @Model.PriceData_D;
     const data_D_success = "@Model.PriceData_D_Success";
-    const data_W = @Html.Raw(Model.PriceData_W);
+    const data_W = @Model.PriceData_W;
     const data_W_success = "@Model.PriceData_W_Success";
-    const data_M = @Html.Raw(Model.PriceData_M);
+    const data_M = @Model.PriceData_M;
     const data_M_success = "@Model.PriceData_M_Success";
 
     // 技術分析
