--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -122,7 +122,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.IndexName.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
@@ -570,7 +570,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.IndexName.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
@@ -1017,7 +1017,7 @@
                                                                             <div class="l-cardFund__item">
                                                                                 <div class="c-box c-box--goods u-padding-xs u-shadow-animation">
                                                                                     <div class="c-cardFund c-cardFund--half">
-                                                                                        <a href="@index.IndexName.DetailLink" class="c-cardFund__name s4">
+                                                                                        <a href="@index.DetailLink" class="c-cardFund__name s4">
                                                                                             <div class="u-ellipsis-2">@index.IndexName</div>
                                                                                             <div class="u-ellipsis-1">@index.MarketPriceText</div>
                                                                                         </a>
