--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
@@ -238,10 +238,10 @@
                             series: mapData
                         });
                         $.each(years, function (index, value) {
-                            $('#rateSelect')[0].innerHTML+= `<option value="${value}報酬率高到低" data-sorting-column="${value}" data-sorting-class="is-desc" data-idx=${index}>${value}報酬率高到低</option>`;
-                            $('#rateSelect')[0].innerHTML +=`<option value="${value}報酬率低到高" data-sorting-column="${value}" data-sorting-class="is-asc"data-idx=${index}>${value}報酬率低到高</option>`;
-                            $('#feeSelect')[0].innerHTML +=`<option value="${value}費用率高到低" data-sorting-column="${value}" data-sorting-class="is-desc" data-idx=${index}>${value}費用率高到低</option>`;
-                            $('#feeSelect')[0].innerHTML +=`<option value="${value}費用率低到高" data-sorting-column="${value}" data-sorting-class="is-asc" data-idx=${index}>${value}費用率低到高</option>`;
+                            $('#rateSelect')[0].innerHTML += DOMPurify.sanitize(`<option value="${value}報酬率高到低" data-sorting-column="${value}" data-sorting-class="is-desc" data-idx=${index}>${value}報酬率高到低</option>`);
+                            $('#rateSelect')[0].innerHTML += DOMPurify.sanitize(`<option value="${value}報酬率低到高" data-sorting-column="${value}" data-sorting-class="is-asc"data-idx=${index}>${value}報酬率低到高</option>`);
+                            $('#feeSelect')[0].innerHTML += DOMPurify.sanitize(`<option value="${value}費用率高到低" data-sorting-column="${value}" data-sorting-class="is-desc" data-idx=${index}>${value}費用率高到低</option>`);
+                            $('#feeSelect')[0].innerHTML += DOMPurify.sanitize(`<option value="${value}費用率低到高" data-sorting-column="${value}" data-sorting-class="is-asc" data-idx=${index}>${value}費用率低到高</option>`);
                         });
                         ShowRateTable(mapData, years);
                         ShowFeeTable(mapData, years);
